feat: 表格数据展示

--- a/vite-project/src/styles/index.less
+++ b/vite-project/src/styles/index.less
@@ -36,9 +36,9 @@ html, body, #app {height: 100%}
 
 .el-main {
   background-color: #E9EEF3;
-  color: #333;
-  text-align: center;
-  line-height: 160px;
+//   color: #333;
+//   text-align: center;
+//   line-height: 160px;
 }
 
 body > .el-container {
