--- a/vite-project/src/styles/index.less
+++ b/vite-project/src/styles/index.less
@@ -32,6 +32,7 @@ html, body, #app {height: 100%}
 }
 
 .el-main {
+  height: 100%;
   background-color: #E9EEF3;
 //   color: #333;
 //   text-align: center;
